@@ -1,24 +1,23 @@
 package cv.portofolio.service;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Stream;
 
 public class GameGrid {
 
-   private static List<List<Integer>> gameGrid = new ArrayList<>(new ArrayList<>(Arrays.asList(
+    private static List<List<Integer>> gameGrid = List.of(
             new ArrayList<>(List.of(0, 0, 0)),
             new ArrayList<>(List.of(0, 0, 0)),
             new ArrayList<>(List.of(0, 0, 0))
-    )));
+    );
 
     public GameGrid() {
     }
 
     public List<List<Integer>> getGameGrid() {
-        return gameGrid;
+        return List.copyOf(gameGrid);
     }
 
     public List<List<Integer>> updateGrid(int playerTurn, int location) {
@@ -43,21 +42,19 @@ public class GameGrid {
     }
 
     public void resetGrid() {
-        for(int i = 0 ; i< getGameGrid().size(); i++) {
-            for (int j = 0; j< getGameGrid().get(i).size(); j++) {
+        for (int i = 0; i < getGameGrid().size(); i++) {
+            for (int j = 0; j < getGameGrid().get(i).size(); j++) {
                 getGameGrid().get(i).set(j, 0);
             }
         }
     }
 
-    public ArrayList<Integer> flatGrid () {
-        ArrayList<Integer> flatGrid = new ArrayList<>(9);
-        Stream.of(getGameGrid())
-                .flatMap(Collection::stream)
-                .flatMap(Collection::stream)
-                .forEachOrdered(flatGrid::add);
+    public List<Integer> flatGrid() {
 
-        return flatGrid;
+        return Stream.of(getGameGrid())
+                .flatMap(Collection::stream)
+                .flatMap(Collection::stream)
+                .toList();
     }
 
 
